--- a/vim/bundle/LanguageClient-neovim/Makefile
+++ b/vim/bundle/LanguageClient-neovim/Makefile
@@ -1,4 +1,9 @@
-all: check build fmt clippy
+all: release
+
+dev: build fmt clippy vint
+
+ci: vint python-lint test integration-test
+	cargo fmt -- --check
 
 check:
 	cargo check
@@ -17,35 +22,35 @@ vint:
 
 release:
 	cargo build --release
-	cp -f target/release/languageclient bin/
+	[ -z "${CARGO_TARGET_DIR}" ] && \
+		cp -f target/release/languageclient bin/ || \
+		cp -f ${CARGO_TARGET_DIR}/release/languageclient bin/
 	chmod a+x bin/languageclient
 
 bump-version:
-	[[ `git rev-parse --abbrev-ref HEAD` == "next" ]] || (echo "Not on branch next"; exit 1)
+	[[ `git rev-parse --abbrev-ref HEAD` == "dev" ]] || (echo "Not on branch dev"; exit 1)
 	cargo release patch
 
 test:
 	cargo test
 
-integration-test-lint:
+python-lint:
 	mypy --ignore-missing-imports \
 		tests \
 		rplugin/python3/denite/source \
 		rplugin/python3/deoplete/sources
 	flake8 .
 
-integration-test: build integration-test-lint
+integration-test: build
 	tests/test.sh
 
 integration-test-docker:
-	docker image pull autozimu/languageclientneovim
 	docker run --volume ${CURDIR}:/root/.config/nvim autozimu/languageclientneovim bash -c "\
 		export CARGO_TARGET_DIR=/tmp && \
 		cd /root/.config/nvim && \
 		make integration-test"
 
 integration-test-docker-debug:
-	docker image pull autozimu/languageclientneovim
 	docker run --interactive --tty --volume ${CURDIR}:/root/.config/nvim autozimu/languageclientneovim
 
 cleanup-binary-tags:
