feat: use gnu stow to manage symlinks

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
 # NOTE: This is the actual `.gitignore` file for this dotfiles repo,
 # not one of my dotfiles.
 
-ssh/known_hosts
-ssh/id_rsa
-
-vim/runtime/undo
+ssh/.ssh/known_hosts
+ssh/.ssh/id_rsa
